alignment corrected

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,6 @@ flex-wrap: wrap;
 justify-content: center;
 align-items: center;
 }
+.Filters{
+  margin:20px;
+}
